# machine_intents

face_detection/: package.xml  setup.cfg  setup.py
face_detection/face_detection/: face_detection.py
intents_consolidator/: CMakeLists.txt  package.xml
intents_consolidator/include/intents_consolidator/: consolidator_node.hpp
intents_consolidator/include/intents_consolidator/datastructures/: embedding.hpp  embeddings.hpp
intents_consolidator/include/intents_consolidator/intents/consolidator/: consolidator.hpp  state.hpp
intents_consolidator/include/intents_consolidator/intents/consolidator/handlers/: facial_recognition_handler.hpp
intents_consolidator/include/intents_consolidator/intents/consolidator/result/: object_classification_result.hpp  result.hpp
intents_consolidator/include/intents_consolidator/intents/entity/: entity.hpp  goal_type.hpp  location.hpp  occupant.hpp  point_of_interest.hpp  pose.hpp  size.hpp
intents_consolidator/src/: consolidator_main.cpp  consolidator_node.cpp  embedding  embedding.cpp
intents_consolidator/src/datastructures/: embedding.cpp
intents_consolidator/src/intents/consolidator/: consolidator.cpp  consolidator_test.cpp
intents_consolidator/src/intents/consolidator/handlers/: facial_recognition_handler.cpp
intents_consolidator/src/intents/entity/: point_of_interest.cpp
machine_intents_interfaces/: CMakeLists.txt  package.xml
machine_intents_interfaces/msg/: DetectionResult.msg  Embedding.msg
